# invenio-oaiserver-cmdi

./: README.md  pyproject.toml
invenio_oaiserver_cmdi/: __init__.py  config.py  ext.py  oai.py  views.py
tests/: conftest.py  test_invenio_oaiserver_cmdi.py
