[build-system]
requires = ["setuptools>=61.0", "invenio-oaiserver>=2.1.1", "invenio_rdm_records>=1.3.5", "lxml>=4.9.2", "requests>=2.28.2"]
build-backend = "setuptools.build_meta"

[project]
name = "invenio-oaiserver-cmdi"
version = "0.0.1"
authors = [
  { name="Herbert Lange", email="lange@ids-mannheim.de" },
]
description = "Module to extend the OAI server to also serve CMDI files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/daherb/invenio-oaiserver-cmdi"
"Bug Tracker" = "https://github.com/daherb/invenio-oaiserver-cmdi/issues"

[project.entry-points."invenio_base.apps"]
invenio_oaiserver_cmdi = "invenio_oaiserver_cmdi:InvenioOAIServerCMDI"
[project.entry-points."invenio_base.blueprints"]
invenio_oaiserver_cmdi = "invenio_oaiserver_cmdi.views:blueprint"
[project.entry-points."invenio_config.module"]
invenio_oaiserver_cmdi = "invenio_oaiserver_cmdi.config"
#[project.entry-points."invenio_oai.oais"]
#invenio_oaiserver_cmdi = "invenio_oaiserver_cmdi.extensions.cmdi"